<resources>
    <string name="app_name">나비엔 에어원</string>
    <string name="navien">경동나비엔</string>
    <string name="navien_tac">나비엔 에어 룸콘트롤러</string>
    <string name="on_off">운전/정지</string>
    <string name="pass">건너뛰기</string>
    <string name="ok">확인</string>
    <string name="no">아니오</string>
    <string name="init">앱 초기화</string>
    <string name="setting">설정</string>
    <string name="withdraw">탈퇴</string>
    <string name="register">등록</string>
    <string name="show_more">더보기</string>
    <string name="agree">동의</string>
    <string name="withdraw_after_set_admin">관리자 지정 후 탈퇴하기</string>
    <string name="cancel">취소</string>
    <string name="edit">편집</string>
    <string name="close">닫기</string>
    <string name="save">저장</string>
    <string name="month">월</string>
    <string name="week">주</string>
    <string name="day">일</string>
    <string name="share">인증코드 전달하기</string>
    <string name="network">네트워크</string>
    <string name="push_alarm">Push 알림</string>
    <string name="push_alarm_time">허용시간 설정</string>
    <string name="start_time">시작시간</string>
    <string name="stop_time">종료시간</string>
    <string name="success_changing">수정완료</string>
    <string name="total_air_value">통합공기질</string>
    <string name="do_delete">삭제하기</string>
    <string name="push_alram">PUSH 알림</string>
    <string name="terms_title">서비스 이용약관</string>
    <string name="terms_title2">개인정보 수집 및 이용 동의</string>
    <string name="access_terms">이용약관</string>
    <string name="privacy_terms">개인정보 취급방침</string>
    <string name="do_not_show_again">다시보지 않기</string>
    <string name="confirm">확인</string>
    <string name="refresh">새로고침</string>
    <string name="more">더보기</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="loading_logout">로그아웃 중입니다..</string>
    <string name="control">제어</string>
    <string name="notice">공지사항</string>
    <string name="templature">온도</string>
    <string name="remove_user">회원탈퇴</string>
    <string name="hour">시</string>
    <string name="minute">분</string>
    <string name="sensorbox">에어모니터</string>
    <string name="disconnected">해제</string>
    <string name="connect">연결</string>
    <string name="connected">연결됨</string>
    <string name="register_device">기기추가</string>
    <string name="register_device2">기기등록</string>
    <string name="resend_auth_mail">인증메일 다시 보내기</string>
    <string name="setting_login">로그인 설정</string>
    <string name="setting_device">기기 설정</string>
    <string name="select_device">기기 선택</string>
    <string name="manager_device">기기관리</string>
    <string name="control_device">제어기기</string>
    <string name="device_info">제품정보</string>
    <string name="smart_guide">스마트가이드</string>
    <string name="user_guide">사용설명서</string>
    <string name="app_info">앱정보</string>
    <string name="help">도움말</string>
    <string name="air_info">공기질 정보</string>
    <string name="filter_manage">필터 관리</string>
    <string name="filter_life">필터 수명</string>
    <string name="filter_reset">필터 리셋</string>
    <string name="filter_buy">필터 구매하기</string>
    <string name="cs_center">고객지원</string>
    <string name="auto_login">자동로그인</string>
    <string name="edit_userinfo">회원정보 수정</string>
    <string name="setting_user">사용자 설정</string>
    <string name="add_user">사용자 추가</string>
    <string name="manager_user">사용자 관리</string>
    <string name="select_admin">관리자 지정</string>
    <string name="count_user">%s명</string>
    <string name="admin">관리자</string>
    <string name="init_app">앱초기화</string>
    <string name="setting_admin">관리자 설정</string>
    <string name="smartalarm">스마트알림</string>
    <string name="add_device">+ 기기 추가</string>
    <string name="add_user_plus">+ 사용자 추가</string>
    <string name="init_app_popup_confirm">나비엔 에어원의 모든 데이터가\n초기화 됩니다.\n앱을 초기화 하시겠습니까?</string>
    <string name="init_app_popup_success">나비엔 에어원 앱이 초기화 되었습니다.</string>
    <string name="deleted_user_popup_success">선택한 사용자가 삭제 되었습니다.</string>
    <string name="error_states_device_no_database_popup">제어할 기기를 찾지 못하였습니다.\n기기설정에서 제어 기기를 선택해주세요.</string>
    <string name="error_states_device_no_connected_popup">기기와 연결되지 않았습니다.\n네트워크와 공유기를 확인하시고 다시 시도해주세요.</string>
    <string name="error_states_no_control_device_popup">제어기기가 선택되지 않았습니다\n제어기기를 선택해주세요.</string>
    <string name="withdraw_popup_confirm">회원 탈퇴 시 등록하신 모든 정보가 삭제됩니다. 회원 탈퇴를 하시겠습니까?</string>
    <string name="withdraw_popup_success">회원 탈퇴가 완료 되었습니다.</string>
    <string name="change_admin_popup_success">관리자가 변경되었습니다.\n권한을 초기화되어 로그인화면으로 이동합니다.</string>
    <string name="change_admin_popup_success_and_withdraw_me">관리자가 변경되었습니다.\n잠시후 회원탈퇴를 진행합니다.</string>
    <string name="error_firstsend_for_control_device">제어 기기의 초기 통신이\n실패하여 종료합니다.</string>
    <string name="error_connect_for_control_device">제어 기기가 서버와 통신이\n실패하여 종료합니다.</string>
    <string name="error_reservation_sleep_mode_until_poweroff">정지 중일 경우에는\n취침 예약을 설정 할 수 없습니다.</string>
    <string name="error_code_api_502">입력 정보의 오류가 발생했습니다.\n다시 시도해 주세요.</string>
    <string name="error_code_device_094">온도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_101">FAN에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_102">FAN에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_120">히터에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_160">자동필터알람에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_161">자동필터알람에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_506">온도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_507">히터에 문제가 발생 했습니다.\n[Cod : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_516">온도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_517">습도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_518">온도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_715">통신에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_170">디퓨저에 문제가 발생했습니다. [Code : %03d-%02d] 고객센터 1588-1144</string>
    <string name="error_code_device_770">디퓨저에 문제가 발생했습니다. [Code : %03d-%02d] 고객센터 1588-1144</string>
    <string name="error_code_device_105">제습로터에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_301">제습 드레인에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_503">온도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_504">온도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_505">온도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_508">온도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_515">습도 센서에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_626">저장에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_721">통신에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_801">컴프레셔에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_802">컴프레셔에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_803">컴프레셔에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_804">컴프레셔에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="error_code_device_805">컴프레셔에 문제가 발생 했습니다.\n[Code : %03d] 고객센터 1588-1144</string>
    <string name="select_device_for_ap">스마트폰의 설정->WIFI메뉴에서 스마트폰과 제품을 연결해주세요.</string>
    <string name="select_device_for_ap_get_id">제품아이디를 가져오기 위해,\n1. 에어 룸콘트롤러를 AP모드로 변경해 주세요.\n2. 핸드폰의 설정에서 Wi-Fi를 연결해 주세요.\n\n 연결이 완료되면 아래 [다음] 버튼을 눌러주세요.</string>
    <string name="select_device_for_ap_get_id_mark">[다음]</string>
    <string name="check_wifi_for_get_id">제품과 스마트폰의 Wi-Fi 연결을 설정해 주세요.</string>
    <string name="check_wifi_for_get_id_mark"> </string>
    <string name="check_network">인터넷에 연결 중입니다. 잠시만 기다려주세요.</string>
    <string name="can_not_geting_id">제품아이디를 가져오지 못하였습니다.</string>
    <string name="menu_home">홈</string>
    <string name="menu_control">제어</string>
    <string name="menu_smartalarm">스마트알림</string>
    <string name="menu_lifereport">생활리포트</string>
    <string name="menu_more">더보기</string>
    <string name="menu_tips">에어원팁</string>
    <string name="delete_device">기기삭제</string>
    <string name="change_ap">WIFI 설정하기</string>
    <string name="select_ap">공유기 선택</string>
    <string name="outside">실외</string>
    <string name="inside">실내</string>
    <string name="unknown">정보없음</string>
    <string name="unknown2line">정보\n없음</string>
    <string name="good">좋음</string>
    <string name="normal">보통</string>
    <string name="bad">나쁨</string>
    <string name="very_bad">매우나쁨</string>
    <string name="very_bad_2line">매우\n나쁨</string>
    <string name="device_name">기기 이름</string>
    <string name="current_version">현재 버전</string>
    <string name="ventilation">청정환기</string>
    <string name="air_clean">실내청정</string>
    <string name="humidification">가습</string>
    <string name="dehumidification">제습</string>
    <string name="humidity">습도</string>
    <string name="current">현재</string>
    <string name="auto">자동</string>
    <string name="auto_control">자동운전</string>
    <string name="total">종합</string>
    <string name="device_roomcon">에어 룸콘트롤러 확인하기</string>
    <string name="wifi_connect">연결하기</string>
    <string name="detail_monitor_title4">1. 에어모니터 설정하기</string>
    <string name="detail_monitor_title5">2. 에어 룸콘트롤러 설정하기</string>
    <string name="detail_monitor_content13">① 제품 옆면의 [페어링] 버튼을 3초간 눌러주세요.</string>
    <string name="detail_monitor_content14">② Wi-Fi 연결이 준비되면 제품 정면의 페어링 LED 조명이 깜빡입니다.</string>
    <string name="detail_monitor_content15">① 제품의 메인화면에서 [설정] 버튼을 눌러주세요.</string>
    <string name="detail_monitor_content16">② 설정화면에서 [기타] 버튼을 눌러주세요.</string>
    <string name="detail_monitor_content17">③ 기타화면에서 [Wi-Fi 설정] 버튼을 눌러주세요.</string>
    <string name="detail_monitor_content18">④ Wi-Fi 설정화면에서 [에어모니터 설정] 버튼을 눌러 주세요.</string>
    <string name="detail_monitor_content19">⑤ 제품 화면에 표시되는 \"NTS-KD~\" 네트워크를 선택해 주세요. </string>
    <string name="detail_monitor_content20">⑥ 에어모니터 연결이 완료되었습니다. </string>
    <string name="detail_room_con_title1">1. 전원 상태 확인하기</string>
    <string name="detail_room_con_title2">2. 네트워크 상태 확인하기</string>
    <string name="detail_room_con_title3">3. 시스템 오류가 발생 했을 경우</string>
    <string name="detail_room_con_title4">4. 에어 룸콘트롤러 재등록하기</string>
    <string name="detail_room_con_content1">① 에어 룸콘트롤러 화면이 켜지지 않을 경우 제품의 전원을 확인해 주세요.</string>
    <string name="detail_room_con_content2">② 에어 룸콘트롤러 하단 중앙에 있는 [RESET]버튼을 눌러주세요.</string>
    <string name="detail_room_con_content3">에어 룸콘트롤러 화면 우측 상단에 Wi-Fi 아이콘이 없다면, 네트워크 연결 상태 확인이 필요합니다.</string>
    <string name="detail_room_con_content4">① 공유기가 바뀌었다면 공유기를 재설정 해주세요.</string>
    <string name="detail_room_con_content5">② 에어 룸콘트롤러와 공유기와의 위치를 통신 가능한 거리로 이동해 주세요.</string>
    <string name="detail_room_con_content6">③ 에어 룸콘트롤러 하단 중앙에 있는 [RESET]버튼을 눌러주세요.</string>
    <string name="detail_room_con_content7">④ 지속적으로 네트워크 연결 문제가 발생 할 경우 공유기를 재설정 해주세요.</string>
    <string name="detail_room_con_content8">① 에어 룸콘트롤러 정면의 LED 조명이 빨간색으로 깜빡인다면 시스템 오류가 발생한 것 입니다.</string>
    <string name="detail_room_con_content9">② 에어 룸콘트롤러 화면 상단에 표시되는 에러 코드 확인 후 고객센터에 문의해 주세요.</string>
    <string name="detail_room_con_content10">에어 룸콘트롤러 고장 및 교체 시 아래의 [연결하기]버튼을 통해 제품을 재등록 해주세요.</string>
    <string name="detail_view">상세보기</string>
    <string name="device_air_monitor">에어모니터</string>
    <string name="wifi_reset">공유기 재설정</string>
    <string name="connect_cs">고객센터 연결하기</string>
</resources>