<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.info.DeviceDetailActivity">

    <LinearLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:scaleType="center"
            app:srcCompat="@drawable/icon_header_close" />

        <RelativeLayout
            android:id="@+id/layoutActionBarTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/detail_view"
                android:textColor="@color/text_title_color"
                android:textSize="18dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/btnReplace"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:onClick="onClick"
            android:scaleType="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/icon_header_main_replace" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layoutTopLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#cccccc"
        app:layout_constraintBottom_toBottomOf="@+id/layoutActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTopLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--룸콘트롤러-->
            <LinearLayout
                android:id="@+id/layoutRoomConDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/device_roomcon"
                    android:textColor="#000000"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:text="@string/detail_room_con_title1"
                    android:textColor="#000000"
                    android:textSize="19dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/detail_roomcon_10pw_01"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content1"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content2"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:text="@string/detail_room_con_title2"
                    android:textColor="#000000"
                    android:textSize="19dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/img_room_con1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/detail_roomcon_10pw_02"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content3"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content4"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content5"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content6"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content7"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <LinearLayout
                    android:id="@+id/layoutRoomConWifi"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="13dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_confirm"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/wifi_reset"
                        android:textColor="#FFFFFF"
                        android:textSize="16dp" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:text="@string/detail_room_con_title3"
                    android:textColor="#000000"
                    android:textSize="19dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/img_room_con2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/detail_roomcon_10pw_03"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content8"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content9"
                    android:textColor="#464646"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:text="@string/detail_room_con_title4"
                    android:textColor="#000000"
                    android:textSize="19dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_room_con_content10"
                    android:textColor="#464646"
                    android:textSize="15dp"/>

                <LinearLayout
                    android:id="@+id/layoutRoomConConnect"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/btn_confirm"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_connect"
                        android:textColor="#FFFFFF"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtCsCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/line_primary"
                android:onClick="onClick"
                android:text="@string/connect_cs"
                android:textColor="#3690b8"
                android:textSize="13dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>